Fix getting ports on a container
